--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,272 @@
-*,::after,::before{margin:0;padding:0;box-sizing:border-box}html{font-size:62.5%}body{font-family:'Roboto', sans-serif;font-weight:400;color:#777777;font-size:1.6rem;letter-spacing:.2rem;padding:5rem;background-color:white}.container{background-color:#F7F7F7}.header{position:relative;height:95vh;background:linear-gradient(90deg, rgba(186,133,84,0.7) .03%, rgba(1,1,1,0.7) 99.94%),url(../img/background-photo.jpg) center/cover no-repeat;clip-path:polygon(0 0, 100% 0, 100% 100%, 0 80%)}.header__logo{position:absolute;left:5rem;top:5rem;height:7rem;width:5.6rem}.header__box{position:absolute;top:40%;left:50%;transform:translate(-50%, -50%);width:100%;text-align:center}.title-first{color:#FFFFFF}.title-first__main{display:block;font-size:5rem;font-weight:800;line-height:6rem;letter-spacing:1rem;text-transform:uppercase;margin-bottom:1rem;animation-name:LeftToRight;animation-duration:1.7s;animation-delay:1s;animation-timing-function:ease;backface-visibility:hidden}.title-first__secondary{display:block;font-size:4rem;font-weight:100;line-height:4.8rem;letter-spacing:.5rem;animation-name:RightToLeft;animation-duration:1.7s;animation-delay:1s;animation-timing-function:ease;backface-visibility:hidden;margin-bottom:6.5rem}.btn:link,.btn:visited{text-transform:uppercase;text-decoration:none;color:#777777;padding:1.5rem 4rem;background:white;border-radius:5rem;display:inline-block;transition:all .3s;position:relative;font-size:2rem}.btn:hover{transform:translateY(-0.4rem);box-shadow:0rem 0.4rem 0.4rem 0rem rgba(0,0,0,0.3)}.btn:active{transform:translateY(-0.1rem);box-shadow:0px 0.4rem 0.4rem 0px rgba(0,0,0,0.1)}.btn_animated{animation:BtnToUp .7s ease-out .7s;animation-fill-mode:backwards}@keyframes BtnToUp{0%{opacity:0;transform:translateY(5rem)}100%{opacity:1;transform:translateY(0px)}}@keyframes LeftToRight{0%{opacity:0;transform:translateX(-10rem)}80%{transform:translateX(1rem)}100%{opacity:1;transform:translateX(0px)}}@keyframes RightToLeft{0%{opacity:0;transform:translateX(10rem)}80%{transform:translateX(-2rem)}100%{opacity:1;transform:translateX(0px)}}
+*, ::after, ::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  color: #777777;
+  font-size: 1.6rem;
+  letter-spacing: .2rem;
+  padding: 5rem;
+  background-color: #FAFAFA;
+}
+
+.container {
+  background-color: #F7F7F7;
+}
+
+@keyframes BtnToUp {
+  0% {
+    opacity: 0;
+    transform: translateY(5rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0rem);
+  }
+}
+
+@keyframes LeftToRight {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem);
+  }
+  80% {
+    transform: translateX(1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0rem);
+  }
+}
+
+@keyframes RightToLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem);
+  }
+  80% {
+    transform: translateX(-2rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0rem);
+  }
+}
+
+.title-first {
+  color: #FAFAFA;
+}
+
+.title-first__main {
+  display: block;
+  font-weight: 800;
+  font-size: 5rem;
+  line-height: 6rem;
+  letter-spacing: 1rem;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  animation-name: LeftToRight;
+  animation-duration: 1.7s;
+  animation-delay: 1s;
+  animation-timing-function: ease;
+  backface-visibility: hidden;
+}
+
+.title-first__secondary {
+  display: block;
+  font-weight: 100;
+  font-size: 4rem;
+  line-height: 4.8rem;
+  letter-spacing: .5rem;
+  animation-name: RightToLeft;
+  animation-duration: 1.7s;
+  animation-delay: 1s;
+  animation-timing-function: ease;
+  backface-visibility: hidden;
+  margin-bottom: 6.5rem;
+}
+
+.title-second {
+  text-align: center;
+  display: inline-block;
+  font-size: 3.6rem;
+  letter-spacing: 1rem;
+  text-transform: uppercase;
+  font-weight: 800;
+  background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(161, 79, 3, 0.7) 99.94%);
+  -webkit-background-clip: text;
+  color: transparent;
+  backface-visibility: hidden;
+}
+
+.title-second:hover {
+  text-shadow: 0rem 0.4rem 0.4rem rgba(0, 0, 0, 0.25);
+}
+
+.title-third {
+  font-size: 2rem;
+  letter-spacing: .2rem;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.paragraph {
+  font-size: 1.6rem;
+  letter-spacing: .2rem;
+  line-height: 140%;
+  font-weight: 400;
+}
+
+.text-align-center {
+  text-align: center;
+}
+
+.margin-bottom-10px {
+  margin-bottom: 1rem;
+}
+
+.margin-bottom-30px {
+  margin-bottom: 3rem;
+}
+
+.margin-bottom-50px {
+  margin-bottom: 5rem;
+}
+
+.margin-bottom-80px {
+  margin-bottom: 8rem;
+}
+
+.btn:link, .btn:visited {
+  display: inline-block;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #777777;
+  padding: 1.5rem 4rem;
+  background: #FAFAFA;
+  border-radius: 5rem;
+  transition: all .3s;
+  position: relative;
+  font-size: 2rem;
+}
+
+.btn:hover {
+  transform: translateY(-0.4rem);
+  box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.3);
+}
+
+.btn:active {
+  transform: translateY(-0.1rem);
+  box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.3);
+}
+
+.btn_animated {
+  animation: BtnToUp .7s ease-out .7s;
+  animation-fill-mode: backwards;
+}
+
+.btn-text:link, .btn-text:visited {
+  display: inline-block;
+  font-size: 1.6rem;
+  letter-spacing: .2rem;
+  font-weight: 700;
+  color: #777777;
+  text-decoration: none;
+  padding: 1rem;
+  border-bottom: 1px #BA8554 solid;
+  transition: .9 all;
+}
+
+.btn-text:hover {
+  background-color: #BA8554;
+  color: #FAFAFA;
+  box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.3);
+  transform: translateY(-0.2rem);
+}
+
+.btn-text:active {
+  transform: translateY(0rem);
+}
+
+.header {
+  position: relative;
+  height: 95vh;
+  background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(0, 0, 0, 0.7) 99.94%), url(../img/background-photo.jpg) center/cover no-repeat;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
+}
+
+.header__logo {
+  position: absolute;
+  left: 5rem;
+  top: 5rem;
+  height: 7rem;
+  width: 5.6rem;
+}
+
+.header__box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  text-align: center;
+}
+
+.row {
+  max-width: 114rem;
+  margin: 0 auto;
+}
+
+.row:not(:last-child) {
+  margin-bottom: 8rem;
+}
+
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.col-1-of-2 {
+  width: calc((100% - 6rem) / 2);
+}
+
+.col-1-of-3 {
+  width: calc((100% - 2 * 6rem) / 3);
+}
+
+.col-2-of-3 {
+  width: calc( 2 * ((100% - 2 * 6rem) / 3));
+}
+
+.col-1-of-4 {
+  width: calc((100% - 3 * 6rem) / 4);
+}
+
+.col-2-of-4 {
+  width: calc( 2 * ((100% - 3 * 6rem) / 4) + 6rem);
+}
+
+.col-3-of-4 {
+  width: calc( 3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem);
+}
+
+[class^="col-"] {
+  float: left;
+}
+
+[class^="col-"]:not(:last-child) {
+  margin-right: 6rem;
+}
+
+.section-about {
+  padding-top: 8rem;
+}
