--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,128 +1,19 @@
-*, ::after, ::before
-    margin: 0
-    padding: 0
-    box-sizing: border-box
+@import "abstracts/variable.sass"
+@import "abstracts/mixins.sass"
+@import "abstracts/functions.sass"
 
 
-html
-    font-size: 62.5%
+@import "base/base.sass"
+@import "base/animation.sass"
+@import "base/typography.sass"
+@import "base/utilities.sass"
+    
+    
+@import "components/button.sass"
+@import "components/button-text.sass"
 
 
-body
-    font-family: 'Roboto', sans-serif
-    font-weight: 400
-    color: #777777
-    font-size: 1.6rem
-    letter-spacing: .2rem
-    padding: 5rem
-    background-color: white
+@import "layout/header.sass"
+@import "layout/grid.sass" 
 
-
-.container
-    background-color: #F7F7F7
-
-
-.header
-    position: relative
-    height: 95vh
-    background: linear-gradient(90deg, rgba(186, 133, 84, 0.70) 0.03%,
-    rgba(1, 1, 1, 0.70) 99.94%), 
-    url(../img/background-photo.jpg) center / cover no-repeat
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%)
-    &__logo
-        position: absolute
-        left: 5rem
-        top: 5rem
-        height: 7rem
-        width: 5.6rem
-    &__box
-        position: absolute
-        top: 40%
-        left: 50%
-        transform: translate(-50%, -50%)
-        width: 100%
-        text-align: center
-
-
-.title-first
-    color: #FFFFFF
-    &__main
-        display: block
-        font-size: 5rem
-        font-weight: 800
-        line-height: 6rem
-        letter-spacing: 1rem
-        text-transform: uppercase
-        margin-bottom: 1rem
-        animation-name: LeftToRight
-        animation-duration: 1.7s
-        animation-delay: 1s
-        animation-timing-function: ease
-        backface-visibility: hidden
-    &__secondary
-        display: block
-        font-size: 4rem
-        font-weight: 100
-        line-height: 4.8rem
-        letter-spacing: .5rem
-        animation-name: RightToLeft
-        animation-duration: 1.7s
-        animation-delay: 1s
-        animation-timing-function: ease
-        backface-visibility: hidden
-        margin-bottom: 6.5rem
-
-
-.btn
-    &:link, &:visited
-        text-transform: uppercase
-        text-decoration: none
-        color: #777777
-        padding: 1.5rem 4rem
-        background: white
-        border-radius: 5rem
-        display: inline-block
-        transition: all .3s
-        position: relative
-        font-size: 2rem
-    &:hover
-        transform: translateY(-.4rem)
-        box-shadow: 0rem .4rem .4rem 0rem rgba(0, 0, 0, 0.3)
-    &:active
-        transform: translateY(-.1rem)
-        box-shadow: (0rem .4rem .4rem 0rem rgba(0, 0, 0, 0.1))
-    &_animated
-        animation: BtnToUp .7s ease-out .7s
-        animation-fill-mode: backwards
-
-
-        
-@keyframes BtnToUp
-    0%
-        opacity: 0
-        transform: translateY(5rem)
-
-    100%
-        opacity: 1
-        transform: translateY(0rem)
-      
-
-@keyframes LeftToRight
-    0%
-        opacity: 0
-        transform: translateX(-10rem)
-    80%
-        transform: translateX(1rem)
-    100%
-        opacity: 1
-        transform: translateX(0rem)
-
-@keyframes RightToLeft
-    0%
-        opacity: 0
-        transform: translateX(10rem)
-    80%
-        transform: translateX(-2rem)
-    100%
-        opacity: 1
-        transform: translateX(0rem)
+@import "pages/home.sass" 
