The second and third pages are finished. In the third section, the first card has been created.

--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -1,3 +1,13 @@
 .section-about
     padding-top: 8rem
-    
+
+.section-adventure
+    padding: 28rem 0
+    background: linear-gradient(90deg, rgba($color-brown-light, 0.7) 0.03%,
+    rgba($color-black, 0.70) 99.94%), 
+    url(../img/background-adventure.jpeg) center / cover no-repeat
+    clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%)
+
+.section-tour
+    padding-top: 10rem
+
