--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ body {
   font-size: 1.6rem;
   letter-spacing: .2rem;
   font-weight: 700;
-  color: #777777;
+  color: #BA8554;
   text-decoration: none;
   padding: 1rem;
   border-bottom: 1px #BA8554 solid;
@@ -194,6 +194,144 @@ body {
 
 .btn-text:active {
   transform: translateY(0rem);
+}
+
+.composition {
+  position: relative;
+}
+
+.composition__photo {
+  box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.3);
+  width: 55%;
+  border-radius: .5rem;
+  position: absolute;
+  z-index: 10;
+  transition: all .5;
+  outline-offset: 1rem;
+}
+
+.composition__photo_n1 {
+  top: 0rem;
+  left: 0rem;
+}
+
+.composition__photo_n2 {
+  top: 2rem;
+  right: 0rem;
+}
+
+.composition__photo_n3 {
+  top: 13rem;
+  left: 10rem;
+}
+
+.composition__photo:hover {
+  outline: 1rem solid #BA8554;
+  transform: scale(1.1);
+  z-index: 20;
+}
+
+.composition:hover .composition__photo:not(:hover) {
+  transform: scale(0.95);
+}
+
+.adventure-card {
+  padding: 2.5rem;
+  background-color: rgba(250, 250, 250, 0.8);
+  border-radius: .5rem;
+  box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.3);
+  text-align: center;
+  transition: .2s all;
+}
+
+.adventure-card:hover {
+  transform: translateY(-1.5rem) scale(1.1);
+}
+
+.adventure-card__icon {
+  width: 6rem;
+}
+
+.card-tour {
+  height: 52rem;
+  width: 34rem;
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+}
+
+.card-tour__side {
+  height: 52rem;
+  transition: .7s all ease-out;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  backface-visibility: hidden;
+  box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.3);
+}
+
+.card-tour__side_back {
+  background: #BA8554;
+  transform: rotateY(180deg);
+  background: linear-gradient(120deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(161, 79, 3, 0.7) 99.94%);
+}
+
+.card-tour:hover .card-tour__side_front {
+  transform: rotateY(-180deg);
+}
+
+.card-tour:hover .card-tour__side_back {
+  transform: rotateY(0deg);
+}
+
+.card-tour__img {
+  height: 20rem;
+  background: #BA8554 url(../img/card-1.jpg) center/cover no-repeat;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
+}
+
+.card-tour__title {
+  font-size: 2.8rem;
+  letter-spacing: .2rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  text-align: right;
+  position: absolute;
+  top: 17rem;
+  right: 0rem;
+}
+
+.card-tour__span {
+  background: linear-gradient(90deg, #BA8554, #A14F03);
+  padding: 1rem 2rem .3rem 2rem;
+  color: #FAFAFA;
+}
+
+.card-tour__span_2 {
+  position: absolute;
+  top: 3.4rem;
+  right: 0rem;
+  padding-bottom: 1rem;
+  padding-top: 0;
+}
+
+.card-tour__descr ul {
+  list-style: none;
+  margin: 0 auto;
+  width: 75%;
+}
+
+.card-tour__descr ul li {
+  font-size: 1.6rem;
+  letter-spacing: .2rem;
+  color: #777777;
+  border-bottom: 1px solid #777777;
+  text-align: center;
+}
+
+.card-tour__descr ul li:not(:last-child) {
+  margin-bottom: 2rem;
 }
 
 .header {
@@ -269,4 +407,14 @@ body {
 
 .section-about {
   padding-top: 8rem;
+}
+
+.section-adventure {
+  padding: 28rem 0;
+  background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(0, 0, 0, 0.7) 99.94%), url(../img/background-adventure.jpeg) center/cover no-repeat;
+  clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%);
+}
+
+.section-tour {
+  padding-top: 10rem;
 }
