--- a/sass/components/_button-text.sass
+++ b/sass/components/_button-text.sass
@@ -4,7 +4,7 @@
         font-size: $font-size-paragraph
         letter-spacing: .2rem
         font-weight: 700
-        color: $color-gray
+        color: $color-brown-light
         text-decoration: none
         padding: 1rem
         border-bottom:  1px $color-brown-light solid
