--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,7 +11,9 @@
     
 @import "components/button.sass"
 @import "components/button-text.sass"
-
+@import "components/composition.sass"
+@import "components/adventure-card.sass"
+@import "components/tour-card.sass"
 
 @import "layout/header.sass"
 @import "layout/grid.sass" 
