Pages four and five are complete.

--- a/sass/abstracts/_variable.sass
+++ b/sass/abstracts/_variable.sass
@@ -7,7 +7,7 @@ $color-brown-dark: #A14F03
 
 // Black and white colors
 $color-black: #000000
-$color-white: #FAFAFA
+$color-white: #ffffff
 
 // Shadow for button
 $box-shadow: (0rem .4rem .4rem 0rem rgba(0, 0, 0, 0.3))
