--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -38,6 +38,8 @@
     -webkit-background-clip: text
     color: transparent
     backface-visibility: hidden
+    &_white
+        color: $color-white
     &:hover
         text-shadow: $h2-shadow
 
