--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,13 @@ body {
   font-size: 1.6rem;
   letter-spacing: .2rem;
   padding: 5rem;
-  background-color: #FAFAFA;
+  background-color: #ffffff;
 }
 
 .container {
   background-color: #F7F7F7;
+  position: relative;
+  z-index: 0;
 }
 
 @keyframes BtnToUp {
@@ -62,7 +64,7 @@ body {
 }
 
 .title-first {
-  color: #FAFAFA;
+  color: #ffffff;
 }
 
 .title-first__main {
@@ -105,6 +107,10 @@ body {
   -webkit-background-clip: text;
   color: transparent;
   backface-visibility: hidden;
+}
+
+.title-second_white {
+  color: #ffffff;
 }
 
 .title-second:hover {
@@ -151,7 +157,7 @@ body {
   text-decoration: none;
   color: #777777;
   padding: 1.5rem 4rem;
-  background: #FAFAFA;
+  background: #ffffff;
   border-radius: 5rem;
   transition: all .3s;
   position: relative;
@@ -187,7 +193,7 @@ body {
 
 .btn-text:hover {
   background-color: #BA8554;
-  color: #FAFAFA;
+  color: #ffffff;
   box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.3);
   transform: translateY(-0.2rem);
 }
@@ -237,7 +243,7 @@ body {
 
 .adventure-card {
   padding: 2.5rem;
-  background-color: rgba(250, 250, 250, 0.8);
+  background-color: rgba(255, 255, 255, 0.8);
   border-radius: .5rem;
   box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.3);
   text-align: center;
@@ -258,6 +264,7 @@ body {
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
+  margin: 0 auto;
 }
 
 .card-tour__side {
@@ -269,12 +276,14 @@ body {
   width: 100%;
   backface-visibility: hidden;
   box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.3);
+  border-radius: .5rem;
+  overflow: hidden;
 }
 
 .card-tour__side_back {
   background: #BA8554;
   transform: rotateY(180deg);
-  background: linear-gradient(120deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(161, 79, 3, 0.7) 99.94%);
+  background: linear-gradient(120deg, #BA8554, #A14F03);
 }
 
 .card-tour:hover .card-tour__side_front {
@@ -286,9 +295,21 @@ body {
 }
 
 .card-tour__img {
+  background-blend-mode: soft-light;
   height: 20rem;
-  background: #BA8554 url(../img/card-1.jpg) center/cover no-repeat;
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
+}
+
+.card-tour__img_1 {
+  background: #BA8554 url(../img/card-1.jpg) center/cover no-repeat;
+}
+
+.card-tour__img_2 {
+  background: #BA8554 url(../img/card-2.jpg) center/cover no-repeat;
+}
+
+.card-tour__img_3 {
+  background: #BA8554 url(../img/card-3.jpg) center/cover no-repeat;
 }
 
 .card-tour__title {
@@ -305,7 +326,7 @@ body {
 .card-tour__span {
   background: linear-gradient(90deg, #BA8554, #A14F03);
   padding: 1rem 2rem .3rem 2rem;
-  color: #FAFAFA;
+  color: #ffffff;
 }
 
 .card-tour__span_2 {
@@ -320,6 +341,7 @@ body {
   list-style: none;
   margin: 0 auto;
   width: 75%;
+  text-align: center;
 }
 
 .card-tour__descr ul li {
@@ -327,11 +349,112 @@ body {
   letter-spacing: .2rem;
   color: #777777;
   border-bottom: 1px solid #777777;
-  text-align: center;
+  display: inline-block;
 }
 
 .card-tour__descr ul li:not(:last-child) {
   margin-bottom: 2rem;
+}
+
+.card-tour__backSide-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-transform: uppercase;
+  text-align: center;
+  color: #ffffff;
+}
+
+.card-tour__text_1 {
+  font-size: 1.6rem;
+  font-weight: 300;
+  margin-bottom: 8rem;
+  letter-spacing: .2rem;
+}
+
+.card-tour__text_2 {
+  font-size: 6rem;
+  font-weight: 500;
+  margin-bottom: 8rem;
+  letter-spacing: .2rem;
+}
+
+.feedback-card {
+  width: 80%;
+  background: rgba(255, 255, 255, 0.75);
+  box-shadow: 0rem 0.4rem 0.4rem 0rem rgba(0, 0, 0, 0.3);
+  margin: 0 auto;
+  padding: 6rem;
+  position: relative;
+  transform: skewX(-15deg);
+}
+
+.feedback-card > * {
+  transform: skewX(15deg);
+}
+
+.feedback-card__img {
+  width: 15rem;
+  height: 15rem;
+  float: left;
+  border-radius: 100rem;
+  shape-outside: circle(50% at 50% 50%);
+  -webkit-shape-outside: circle(50% at 50% 50%);
+  margin-right: 4rem;
+  overflow: hidden;
+  position: relative;
+}
+
+.feedback-card__img img {
+  height: 100%;
+  transform: scale(1.2);
+  transition: all .5s;
+}
+
+.feedback-card__name {
+  font-size: 2.4rem;
+  letter-spacing: .2rem;
+  font-weight: 400;
+  color: #ffffff;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transition: all .5s;
+  transform: translate(-50%, -20%);
+  opacity: 0;
+}
+
+.feedback-card:hover .feedback-card__name {
+  transform: translate(-50%, -50%);
+  opacity: 1;
+}
+
+.feedback-card:hover img {
+  transform: scale(1);
+  filter: blur(0.3rem) brightness(60%);
+}
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  object-fit: cover;
+}
+
+.bg-gradient {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+  background: linear-gradient(-90deg, rgba(0, 0, 0, 0.7), rgba(161, 79, 3, 0.7));
 }
 
 .header {
@@ -407,6 +530,7 @@ body {
 
 .section-about {
   padding-top: 8rem;
+  margin-bottom: 20rem;
 }
 
 .section-adventure {
@@ -416,5 +540,11 @@ body {
 }
 
 .section-tour {
-  padding-top: 10rem;
+  padding-top: 21rem;
+  margin-bottom: 8rem;
+}
+
+.section-feedback {
+  padding: 8rem 0rem;
+  position: relative;
 }
