--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -1,5 +1,6 @@
 .section-about
     padding-top: 8rem
+    margin-bottom: 20rem
 
 .section-adventure
     padding: 28rem 0
@@ -9,5 +10,12 @@
     clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 85%)
 
 .section-tour
-    padding-top: 10rem
+    padding-top: 21rem
+    margin-bottom: 8rem
+
+.section-feedback
+    padding: 8rem 0rem
+    position: relative
+
+
 
