--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,6 +14,8 @@
 @import "components/composition.sass"
 @import "components/adventure-card.sass"
 @import "components/tour-card.sass"
+@import "components/feedback-card.sass"
+@import "components/bg-video.sass"
 
 @import "layout/header.sass"
 @import "layout/grid.sass" 
